homelab/hashicorp-vault/gateway-api/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homelab-vault
spec:
  hostnames:
    - vault.derwitt.site
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: derwitt-site-gateway
      namespace: traefik
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: vault-active
          port: 8200
          weight: 100
      matches:
        - path:
            type: PathPrefix
            value: /
